# TEP

./: CMakeLists.txt  main.cpp
BigInteger/: BigInteger.cpp  BigInteger.h
allocTable2Dim/: allocTable2Dim.cpp  allocTable2Dim.h
allocateTableFill34/: allocateTableFill34.cpp  allocateTableFill34.h
cTable/: cTable.cpp  cTable.h  cTableTest.cpp  cTableTest.h
deallocTable2Dim/: deallocTable2Dim.cpp  deallocTable2Dim.h
insertCols/: insertCols.cpp  insertCols.h
